--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "angular-local-storage": "^0.5.0"
+    "angular-local-storage": "^0.5.0",
+    "sweetalert2": "^5.2.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
